objects/ASI_KOR_NSD_Proposal_By_Brand__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_1_Month_Ago__c</fullName>
        <label>Actual Volume (1 Month Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Actual_Volume_2_Months_Ago__c</fullName>
        <label>Actual Volume (2 Months Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipName>NSD_Proposal_By_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Target_VI__c</fullName>
        <label>Budget Target VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Budget_Target_Volume__c</fullName>
        <label>Budget Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_Pending__c</fullName>
        <label>CA Amount (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Budget_Status__c</fullName>
        <formula>/* logic before CRM P4.2 
IF( ASI_KOR_Total_CA_Amount_excl_Basic__c  &gt;  ASI_KOR_CA_Budget__c ,  &quot;Exceed Budget&quot; ,  &quot;Within Budget&quot; )
*/
IF(ASI_KOR_Target_Volume_Pending__c = 0, 
  &quot;Within Target&quot;,
  IF( ( (  ASI_KOR_Total_Incentive_Amount_Pending__c / ASI_KOR_Target_Volume_Pending__c )&gt;   (ASI_KOR_Budget_Target_VI__c/ASI_KOR_Budget_Target_Volume__c) ),  &quot;Exceed Target&quot; , &quot;Within Target&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Budget__c</fullName>
        <label>CA Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Category__c</fullName>
        <formula>ASI_KOR_Brand__r.ASI_KOR_Product_Categoray__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Growth__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Last_3_month_Actual_average_Volu__c) || ASI_KOR_Last_3_month_Actual_average_Volu__c== 0),0,ASI_KOR_Target_Volume__c  /  ASI_KOR_Last_3_month_Actual_average_Volu__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Last_3_month_Actual_average_Volu__c</fullName>
        <label>P3M Act. Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_NSD_Proposal_Header__c</fullName>
        <label>NSD Sales Planning</label>
        <referenceTo>ASI_KOR_NSD_Proposal_Header__c</referenceTo>
        <relationshipName>ASI_KOR_NSD_Proposal_By_Brands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Proposal_Unit_Cost_Basic_CA__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Target_Volume__c) || ASI_KOR_Target_Volume__c== 0),0,ASI_KOR_Total_Incentive_Amount_Proposal__c /  ASI_KOR_Target_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Proposal_Unit_Cost_CA_Only__c</fullName>
        <formula>if((ISBLANK(ASI_KOR_Target_Volume__c) || ASI_KOR_Target_Volume__c== 0),0,ASI_KOR_Total_CA_Amount_excl_Basic__c /  ASI_KOR_Target_Volume__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Unit Cost (CA Only)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume_Pending__c</fullName>
        <label>Target Volume (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_CA_Amount_excl_Basic__c</fullName>
        <label>Total CA (excl. Basic)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Pending__c</fullName>
        <label>Total VI (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Incentive_Amount_Proposal__c</fullName>
        <label>Total VI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_1_Month_Ago__c</fullName>
        <label>Total VI (1 Month Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_2_Months_Ago__c</fullName>
        <label>Total VI (2 Months Ago)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NSD Sales Planning By Brand</label>
    <nameField>
        <displayFormat>NPI-{000000000}</displayFormat>
        <label>NSD Sales Planning By Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSD Sales Planning By Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>